--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -122,7 +122,7 @@ services:
       ALLOW_MERIS_LPAS: "false"
       DONT_SEND_LPAS_REGISTERED_AFTER_SEP_2019_TO_CLEANSING_TEAM: "true"
       INSTRUCTIONS_AND_PREFERENCES: "true"
-      ALLOW_GOV_ONE_LOGIN: "true"
+      ALLOW_GOV_ONE_LOGIN: "false"
 
       # Local only
       API_SERVICE_URL: http://api-web
