--- a/docker-compose.testing.yml
+++ b/docker-compose.testing.yml
@@ -10,6 +10,12 @@ services:
       - tools
     build:
       context: zap
+    environment:
+      ULPA_USER: opg-use-an-lpa+test-user@digital.justice.gov.uk
+      ULPA_PWORD: umlTest1
+      ULPA_URI: https://host.docker.internal:9042/
+    volumes:
+      - ./zap/report:/zap/report
 
   smoke-tests:
     profiles:
