--- a/.github/workflows/path-to-live.yml
+++ b/.github/workflows/path-to-live.yml
@@ -217,6 +217,21 @@ jobs:
       webhook: ${{ secrets.PROD_SLACK_WEB_HOOK }}
     if: always()
 
+  semver_tag:
+    name: update semantic version
+    runs-on: ubuntu-latest
+    steps:
+      - name: checkout
+        uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # pin@v3
+        
+      - name: Bump version and push tag
+        uses: anothrNick/github-tag-action@1.64.0
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          WITH_V: true
+          INITIAL_VERSION: 1.0.0
+          DEFAULT_BUMP: minor
+
   # Required end of workflow job
   end_of_workflow:
     name: end of workflow
