UML-3224: remove comment

--- a/.github/workflows/path-to-live.yml
+++ b/.github/workflows/path-to-live.yml
@@ -29,7 +29,7 @@ jobs:
     runs-on: ubuntu-latest
     name: output workflow variables
     permissions:
-      contents: write # To create a semver tag
+      contents: write
     outputs:
       short_sha:  ${{ steps.variables.outputs.short_sha }}
       semver_tag: ${{ steps.semver_tag.outputs.new_tag }}
