--- a/lambda-functions/upload-statistics/Dockerfile
+++ b/lambda-functions/upload-statistics/Dockerfile
@@ -40,7 +40,7 @@ RUN python -m pip install \
 
 FROM python:3.11-slim
 
-RUN apt install gcc python3-dev
+RUN apt -y update && apt -y install gcc python3-dev
 # Include global arg in this stage of the build
 ARG FUNCTION_DIR
 # Set working directory to function root directory
