--- a/.github/workflows/path-to-live.yml
+++ b/.github/workflows/path-to-live.yml
@@ -39,15 +39,13 @@ jobs:
         id: variables
         run: |
           echo "short_sha=$(echo ${GITHUB_SHA:0:7})" >> $GITHUB_OUTPUT
-  
+
       - name: Bump version and push tag
-        uses: anothrNick/github-tag-action@1.64.0
+        uses: ministryofjustice/opg-github-actions/.github/actions/semver-tag@v2.3.1
         id: semver_tag
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           WITH_V: true
-          INITIAL_VERSION: 1.0.0
-          DEFAULT_BUMP: minor
 
   terraform_lint:
     name: lint terraform code
