UML-3242: #patch change default bump to minor

--- a/.github/workflows/path-to-live.yml
+++ b/.github/workflows/path-to-live.yml
@@ -41,11 +41,12 @@ jobs:
           echo "short_sha=$(echo ${GITHUB_SHA:0:7})" >> $GITHUB_OUTPUT
 
       - name: Bump version and push tag
-        uses: ministryofjustice/opg-github-actions/.github/actions/semver-tag@v2.6.2
+        uses: ministryofjustice/opg-github-actions/.github/actions/semver-tag@v2.7.2
         id: semver_tag
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           with_v: true
+          default_bump: minor
 
   terraform_lint:
     name: lint terraform code
