--- a/.github/workflows/_lint-terraform.yml
+++ b/.github/workflows/_lint-terraform.yml
@@ -33,6 +33,9 @@ jobs:
         with:
           terraform_version: ${{ steps.set-terraform-version.outputs.TF_VERSION }}
 
+      - uses: terraform-linters/setup-tflint@v4
+        name: Setup TFLint
+
       - name: configure AWS credentials for terraform
         uses: aws-actions/configure-aws-credentials@e6c766a518826746395987edb73a1a5767d0b602 # pin@v1.7.0
         with:
@@ -48,6 +51,10 @@ jobs:
 
       - name: terraform fmt ${{ matrix.folder }} check
         run: terraform fmt -check -recursive
+        working-directory: ./terraform/${{ matrix.folder }}
+
+      - name: terraform lint ${{ matrix.folder }} check
+        run: tflint --recursive
         working-directory: ./terraform/${{ matrix.folder }}
 
       - name: terraform validate ${{ inputs.workspace }}
