--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -8,9 +8,12 @@ repos:
       - id: end-of-file-fixer
         exclude: '^\.idea/'
   - repo: https://github.com/antonbabenko/pre-commit-terraform
-    rev: v1.76.0
+    rev: v1.86.0
     hooks:
       - id: terraform_fmt
+      - id: terraform_tflint
+        args:
+         - --args=--recursive
   - repo: https://github.com/awslabs/git-secrets
     rev: master
     hooks:
