UML-3221 Export PHP-FPM stats for service-api to CloudWatch (#2526)
* Export php-fpm stats for service-api to CloudWatch

--- a/service-api/docker/app/fpm-pool.ini
+++ b/service-api/docker/app/fpm-pool.ini
@@ -28,3 +28,6 @@ ping.path = /ping
 
 pm = static
 pm.max_children = ${OPG_PHP_POOL_CHILDREN_MAX}
+pm.status_path = /status
+; Create a new pool for the status page to avoid adding overhead to the main pool
+pm.status_listen = 127.0.0.1:9001
