--- a/.github/workflows/_node-build.yml
+++ b/.github/workflows/_node-build.yml
@@ -33,7 +33,7 @@ jobs:
           cd service-front/web/
           npm run build
       - name: archive dist
-        uses: actions/upload-artifact@v3 # pin@v3.1.0
+        uses: actions/upload-artifact@a8a3f3ad30e3422c9c7b888a15615d19a852ae32 # pin@v3.1.0
         with:
           name: dist-web
           path: service-front/web/dist/
