--- a/.github/workflows/_build-and-push.yml
+++ b/.github/workflows/_build-and-push.yml
@@ -138,8 +138,8 @@ jobs:
             go test -race -coverpkg ./... -coverprofile=../build/service-${SVC_PREFIX}/coverage.out -covermode=atomic ./...
           elif [ ${SVC_PREFIX} == 'stats_upload' ]; then
             mkdir -p build/service-${SVC_PREFIX}
-            pip install -r lambda-functions/upload-statistics/requirements-tests.txt
             cd lambda-functions/upload-statistics/app
+            pip install -r ../requirements-tests.txt
             python -m unittest -v
           else
             docker run -d --name tests ${SVC_PREFIX}-app:latest
