--- a/service-api/app/phpunit.xml.dist
+++ b/service-api/app/phpunit.xml.dist
@@ -1,12 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<phpunit xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:noNamespaceSchemaLocation="https://schema.phpunit.de/9.3/phpunit.xsd"
-         bootstrap="vendor/autoload.php"
-         colors="true">
-  <coverage processUncoveredFiles="true">
-    <include>
-      <directory suffix=".php">./src</directory>
-    </include>
+<phpunit xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="https://schema.phpunit.de/10.5/phpunit.xsd" bootstrap="vendor/autoload.php" colors="true" cacheDirectory=".phpunit.cache">
+  <coverage>
     <report>
       <clover outputFile="./build/reports/coverage.xml"/>
       <html outputDirectory="./build/reports/coverage-report" lowUpperBound="35" highLowerBound="70"/>
@@ -20,4 +14,9 @@
   <logging>
     <junit outputFile="./build/reports/results.xml"/>
   </logging>
+  <source>
+    <include>
+      <directory suffix=".php">./src</directory>
+    </include>
+  </source>
 </phpunit>
