--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -218,6 +218,7 @@ services:
       AWS_ACCESS_KEY_ID: "devkey"
       AWS_ENDPOINT_DYNAMODB: http://dynamodb-local:8000
       AWS_ENDPOINT_SECRETSMANAGER: http://localstack:4566
+      AWS_ENDPOINT_SSM: http://localstack:4566
       AWS_SECRET_ACCESS_KEY: "secretdevkey"
       LPA_CODES_STATIC_AUTH_TOKEN: asdf1234567890
       PACT_BROKER_PUBLISH: "false"
