--- a/docker-compose.dependencies.yml
+++ b/docker-compose.dependencies.yml
@@ -103,7 +103,7 @@ services:
 
   mock-one-login:
     container_name: mock-one-login
-    image: 311462405659.dkr.ecr.eu-west-1.amazonaws.com/use_an_lpa/mock_onelogin_app:latest
+    image: 311462405659.dkr.ecr.eu-west-1.amazonaws.com/mock-onelogin:v0.68.0
     ports:
       - "4013:8080"
     environment:
