--- a/service-front/web/package.json
+++ b/service-front/web/package.json
@@ -35,6 +35,7 @@
     "eslint": "^9.0.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^4.2.1",
+    "govuk-one-login-service-header": "github:govuk-one-login/service-header#3dbacbd377068608a9b5d709af3617378fb92ce2",
     "jest": "^29.2.0",
     "jest-environment-jsdom": "^29.2.2",
     "jest-junit": "^16.0.0",
