--- a/.github/workflows/_seed-database.yml
+++ b/.github/workflows/_seed-database.yml
@@ -1,5 +1,10 @@
 on:
   workflow_call:
+    inputs:
+      workspace:
+        description: 'Suffix of the environment_config_file_ artifact to download'
+        required: true
+        type: string
 
 jobs:
   terraform_workflow:
@@ -21,7 +26,7 @@ jobs:
       - name: download cluster_config
         uses: actions/download-artifact@65a9edc5881444af0b9093a5e628f2fe47ea3b2e
         with:
-          name: environment_config_file
+          name: environment_config_file_${{ inputs.workspace }}
           path: terraform/environment
 
       - name: install python
