--- a/.github/workflows/pull-request-path.yml
+++ b/.github/workflows/pull-request-path.yml
@@ -252,9 +252,11 @@ jobs:
     uses: ./.github/workflows/_slack-notification.yml
     needs:
       - run_behat_suite
+      - workspace_name
     with:
       template: successful_dev_build.txt
       workflow_status: ${{ needs.run_behat_suite.result }}
+      workspace: ${{ needs.workspace_name.outputs.name }}
     secrets:
       webhook: ${{ secrets.DEV_SLACK_WEB_HOOK }}
     if: |
