--- a/.github/workflows/workflow-deploy-ref-to-env.yml
+++ b/.github/workflows/workflow-deploy-ref-to-env.yml
@@ -199,6 +199,8 @@ jobs:
       - terraform_apply_environment
       - terraform_apply_shared_development
     secrets: inherit
+    with:
+      workspace: ${{ inputs.terraform_workspace }}
     if: |
       always() &&
       needs.terraform_apply_environment.result == 'success' &&
@@ -226,6 +228,7 @@ jobs:
     with:
       template: successful_dev_build.txt
       workflow_status: ${{ needs.run_behat_suite.result }}
+      workspace: ${{ inputs.terraform_workspace }}
     secrets:
       webhook: ${{ secrets.DEV_SLACK_WEB_HOOK }}
     if: |
