--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,6 +17,7 @@ services:
       sh -c "npm ci --verbose && npm run build"
     volumes:
       - ./service-front/web:/web:rw,delegated
+      - webpack_dist:/web/dist
 
   # ---------------------------
   # PDF Generator
