--- a/.github/workflows/_node-test.yml
+++ b/.github/workflows/_node-test.yml
@@ -34,7 +34,7 @@ jobs:
           mkdir -p ./test-results/junit
           ./node_modules/.bin/jest --ci --runInBand --reporters=summary --reporters=github-actions --reporters=jest-junit
       - name: test summary
-        uses: test-summary/action@2.3
+        uses: test-summary/action@v2.3
         with:
           paths: |
             **/service-front/web/test-results/junit/results.xml
